--- a/app/src/main/res/layout/activity_main_my2.xml
+++ b/app/src/main/res/layout/activity_main_my2.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="@color/color3"
-    >
+    android:background="@color/color3">
 
     <LinearLayout
         android:layout_width="match_parent"
