sdk35-36, landscape support

--- a/app/src/main/res/layout-land/activity_main_my2.xml
+++ b/app/src/main/res/layout-land/activity_main_my2.xml
@@ -12,18 +12,17 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="0.3"
         android:background="@color/color4">
         <TextView
             android:id="@+id/tvInput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end|center_vertical"
-            tools:text="-0123456789+-2E"
-            android:text="0"
+            android:text="-0123456789+-2E"
             android:textColor="@color/color2"
-            android:textSize="64dp"
-            android:maxLines="3"
+            android:textSize="48dp"
+            android:maxLines="1"
             android:textIsSelectable="true"
             android:textStyle="bold" />
     </FrameLayout>
@@ -39,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
-            android:layout_weight="0.425"
+            android:layout_weight="0.415"
             android:backgroundTint="@color/color6"
             android:onClick="onClear"
             android:soundEffectsEnabled="true"
@@ -375,7 +374,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="4dp"
-                    android:layout_weight="0.425"
+                    android:layout_weight="0.415"
                     android:backgroundTint="@color/color2"
                     android:onClick="onDigit"
                     android:soundEffectsEnabled="true"
@@ -425,7 +424,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
-            android:layout_weight="0.18"
+            android:layout_weight="0.19"
             android:backgroundTint="@color/color2"
             android:clickable="false"
             android:onClick="onEqual"
